
8.43  2020-05-18
  - Removed experimental map method from Mojo::Promise, since its test coverage
    was lacking, getting in the way of new feature development.
  - Removed deprecated argument handling from Mojo::Promise::new.
  - Fixed a bug where the resolve class method in Mojo::Promise would
    unnecessarily create new promises.
  - Fixed a promise chaining bug in Mojo::Promise. (karjala)

8.42  2020-05-04
  - This release contains fixes for security issues, everybody should upgrade!
  - Added EXPERIMENTAL support for :any-link pseudo-class to Mojo::DOM::CSS.
  - Added EXPERIMENTAL support for case-sensitive attribute selectors like
    [foo="bar" s] to Mojo::DOM::CSS
  - Renamed experimental :matches pseudo-class to :is in Mojo::DOM::CSS.
  - Fixed a security issue that allowed for _method query parameters to be used
    with GET requests.
  - Fixed a bug in Mojo::DOM::CSS where the case-sensitivity identifier was
    case-sensitive.

8.41  2020-04-30
  - Improved Mojolicious::Commands to treat commands like
    "mojo generate lite_app" as "mojo generate lite-app".

8.40  2020-04-23
  - Fixed support for disabling the inactivity timeout in Mojo::UserAgent.

8.39  2020-04-22
  - Fixed a bug in Mojo::Server::Daemon where active connections could get the
    keep-alive timeout assigned instead of the inactivity timeout.
  - Fixed a race condition in Mojo::UserAgent where test servers would close
    connections prematurely.

8.38  2020-04-21
  - Added run_p method to Mojo::IOLoop::Subprocess. (batman)

8.37  2020-04-19
  - Added keep_alive_timeout attribute to Mojo::Server::Daemon.
  - Added -k options to daemon and prefork commands.
  - Added keep_alive_timeout setting to Hypnotoad.
  - Increased various default timeouts because keep_alive_timeout takes over
    some of their previous responsibility.
  - Improved timeout setting performance significantly in Mojo::IOLoop::Stream.
  - Improved again method in Mojo::Reactor, Mojo::Reactor::EV and